[package]
name = "rust-monkey"
version = "0.1.0"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
linefeed = "0.6"
colored = "1.9.2"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lazy_static = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]


[badges]
maintenance = { status = "actively-developed" }